--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Visite Specialistiche 2 - Cicoria | Dong</title>
-    <link rel="stylesheet" href="../node_modules/bootstrap/dist/css/bootstrap.css"/>
+    <link rel="stylesheet" href="css/bootstrap.css"/>
+    <script src="js/bootstrap.bundle.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -52,6 +53,5 @@
     </div>
 
     <script src="index.js" type="module"></script>
-    <script src="../node_modules/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
